--- a/code/profiling/CMakeLists.txt
+++ b/code/profiling/CMakeLists.txt
@@ -50,3 +50,38 @@ apply_common_cuda_flags(warp_divergence_good_uniform)
 add_executable(warp_divergence_bad_divergent warp_divergence_bad_divergent.cu)
 target_link_libraries(warp_divergence_bad_divergent PRIVATE CUDA::cudart)
 apply_common_cuda_flags(warp_divergence_bad_divergent)
+
+add_executable(phenomenon_divergence_sweep phenomena/phenomenon_divergence_sweep.cu)
+target_include_directories(phenomenon_divergence_sweep PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/phenomena)
+target_link_libraries(phenomenon_divergence_sweep PRIVATE CUDA::cudart)
+apply_common_cuda_flags(phenomenon_divergence_sweep)
+
+add_executable(phenomenon_coalescing_sweep phenomena/phenomenon_coalescing_sweep.cu)
+target_include_directories(phenomenon_coalescing_sweep PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/phenomena)
+target_link_libraries(phenomenon_coalescing_sweep PRIVATE CUDA::cudart)
+apply_common_cuda_flags(phenomenon_coalescing_sweep)
+
+add_executable(phenomenon_shared_bank_conflict phenomena/phenomenon_shared_bank_conflict.cu)
+target_include_directories(phenomenon_shared_bank_conflict PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/phenomena)
+target_link_libraries(phenomenon_shared_bank_conflict PRIVATE CUDA::cudart)
+apply_common_cuda_flags(phenomenon_shared_bank_conflict)
+
+add_executable(phenomenon_launch_overhead phenomena/phenomenon_launch_overhead.cu)
+target_include_directories(phenomenon_launch_overhead PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/phenomena)
+target_link_libraries(phenomenon_launch_overhead PRIVATE CUDA::cudart)
+apply_common_cuda_flags(phenomenon_launch_overhead)
+
+add_executable(phenomenon_ilp_dependency phenomena/phenomenon_ilp_dependency.cu)
+target_include_directories(phenomenon_ilp_dependency PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/phenomena)
+target_link_libraries(phenomenon_ilp_dependency PRIVATE CUDA::cudart)
+apply_common_cuda_flags(phenomenon_ilp_dependency)
+
+add_executable(phenomenon_register_pressure phenomena/phenomenon_register_pressure.cu)
+target_include_directories(phenomenon_register_pressure PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/phenomena)
+target_link_libraries(phenomenon_register_pressure PRIVATE CUDA::cudart)
+apply_common_cuda_flags(phenomenon_register_pressure)
+
+add_executable(phenomenon_arithmetic_intensity_sweep phenomena/phenomenon_arithmetic_intensity_sweep.cu)
+target_include_directories(phenomenon_arithmetic_intensity_sweep PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/phenomena)
+target_link_libraries(phenomenon_arithmetic_intensity_sweep PRIVATE CUDA::cudart)
+apply_common_cuda_flags(phenomenon_arithmetic_intensity_sweep)
